--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Module 2 Assignment</title>
-	<style type="style.css"></style>
+<meta charset="utf-8">
+<title>Module 2 Assignment</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel = "stylesheet" href = "css/style.css">
 </head>
 <body>
-	<div class = "row">
-		<div class = "col-lg-3">1</div>
-		<div class = "col-lg-3">2</div>
-		<div class = "col-lg-3">Hello</div>
+<div class = "container">
+	<header>
+		<h1>Our Menu</h1>
+	</header>
+<section class = "columns">
+	<div class = "column">
+		<h4 id = "Chicken">Chicken</h4>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 	</div>
+	<div class = "column">
+		<h4 id = "Beef">Beef</h4>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+	</div>
+	<div class = "column">
+		<h4 id = "Sushi">Sushi</h4>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+	</div>
+</section>
+</div>
 </body>
 </html>
